[tool.poetry]
name = "testutil"
version = "0.1.0"
description = ""
authors = ["shadeofblue <blue@golem.network>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^5.31.4"
click = "^8.1.3"

[tool.poetry.scripts]
testutil = "testutil.__main__:_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
